k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twopot
  namespace: twopot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - twopot.ad-labs.com
      secretName: twopot-tls
  rules:
    - host: twopot.ad-labs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twopot
                port:
                  number: 80
